--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 .card-text{
     font-size: 16px;
-    color: #266624;
+    color: #b771d8;
     text-align: center;
+}
+h3{
+    text-align: center;
+    color:lightpink;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
