--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,21 @@ h5{
     height: 100px;
     margin-left: 10%;
 }
+h1{
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    color: rgb(218, 120, 196);
+}
+h2{
+    font-size: 25px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align:center;
+    color: rgb(218, 120, 196);
+}
+h4{
+    text-align:center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(214, 56, 188);
+    font-weight: bold;
+}
